<resources>
    <string name="app_name">Sanyukt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_dob">DOB</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="basic_details">Basic Details</string>
    <string name="hint_birth_palace">Birth Place</string>
    <string name="height">Height</string>
    <string name="religion_and_lifeStyle">Religion and lifestyle</string>
    <string name="hint_religion">Religion</string>
    <string name="hint_mother_tounge">Mother tounge</string>
    <string name="hint_father_gotra">Father Gotra</string>
    <string name="hint_mother_gotra">Mother Gotra</string>
    <string name="education_and_professional_info">Education and Proffessional Information</string>
    <string name="family_details">Family Details</string>
    <string name="no_of_brother">Brothers</string>
    <string name="no_of_sisters">Sisters</string>
    <string name="location_details">Location Details</string>
    <string name="about_me">About me</string>
    <string name="married">Married</string>
    <string name="txt_terms"><![CDATA[I accept the Terms & Conditions, Disclaimer and Privacy Policy.]]></string>


    <string name="name_regex">^\\p{L}+[\\p{L}\\p{Z}\\p{P}]{0,}</string>
    <string name="city_error_msg">Please enter a valid city name. Use alphabets only.</string>
    <string name="empty_name">Name cannot be blank</string>
    <string name="name_error_msg">Please enter a valid name</string>
    <string name="email_regex">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="empty_email">Please Enter Email</string>
    <string name="email_error_msg">Please enter a valid Email</string>
    <string name="empty_phone">Phone number cannot be blank</string>
    <string name="phone_regex">[789]{1}[0-9]{9}</string>
    <string name="phone_error_msg">Please enter a valid phone no.</string>
    <string name="password_empty_msg">Please enter a password.</string>
    <string name="hint_height_in_cms">Height (cms)</string>
    <string name="hint_weight_in_kg">Weight (Kg)</string>
    <string name="user_mobile_activity_title">Mobile Number Verfication</string>
    <string name="user_mobile_hdr">Verify Your Mobile Number</string>
    <string name="user_mobile_body">Please enter the OTP (One Time Password) received on your mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">VERIFY</string>
    <string name="request_otp_again_msg">(If you don\'t receive the OTP in 5 minutes, you can request for new OTP by clicking on \"Resend Code\")</string>
    <string name="resend_code_txt"><u>Resend Code</u></string>
    <string name="mobile_verification_footer_note">*Please do not leave or refresh this page without verifying your number</string>
    <string name="otp_error_msg">Please enter valid 6 digit OTP (One Time Password)</string>
    <string name="corss_icon" >\ue828</string>
    <string name="phone_icon" >\uf098</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="pancil_icon" >\ue80a</string>
    <string name="password_icon" >\ue82a</string>
    <string name="like_icon" >\ue809</string>
    <string name="fav_icon">\ue820</string>
    <string name="mobile_icon">\ue80d</string>
    <string name="delete_icon">\uf1f8</string>
    <string name="relation_list_hdr">Relation</string>
    <string name="click_back_again">Please click BACK again to exit</string>
</resources>
