<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_xsmall"
        android:paddingBottom="@dimen/padding_xsmall"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_registration_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/id_registration_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_registration_input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/id_registration_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_registration_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/id_registration_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_registration_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/id_registration_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_registration_input_layout_dob"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_registration_input_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_dob" />
            </android.support.design.widget.TextInputLayout>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:saveEnabled="true"
                android:text="MAIL"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:text="FEMAIL"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>